--- a/assets/styles/layout/_latestReleases.scss
+++ b/assets/styles/layout/_latestReleases.scss
@@ -19,8 +19,8 @@
         .swiper {
           .swiper-wrapper {
             .swiper-slide {
-                width: 234px;
-                height: 350px;
+                // width: 234px;
+                // height: 350px;
                 img {
                   width: 100%;
                   height: 100%;
